@@ -46,10 +46,15 @@ import sys
 
 if sys.version_info[0] > 2:
     import urllib.request as Request
+    import urllib.parse as Parse
     from urllib.error import HTTPError, URLError
 else:
     import urllib2 as Request
     from urllib2 import HTTPError, URLError
+
+import six
+import uuid
+import json
 
 import ssl
 import socket
@@ -73,6 +78,8 @@ import cmorecids
 import teliaplaycids
 #import teliaplayclassiccids
 import playerplcids
+
+sess = requests.Session()
 
 SERVICES = {
     playlistcids.serviceName + '_1' : playlistcids.PlaylistUpdater(instance_number=1),
@@ -656,45 +663,193 @@ class PlayService(xbmc.Player, BasePlayService):
                         xbmcgui.Dialog().ok(strings(57018), strings(57021) + '\n' + strings(57028) + '\n' + str(ex))
 
                 elif self.currentlyPlayedService['service'] == 'Telia Play':
-                    if self.archiveService == '' or self.archivePlaylist == '':
+                    try:
+                        self.playbackStopped = False
+
+                        channelInfo, licenseUrl = channelInfo
+                        strmUrl = channelInfo.strm
+
                         try:
-                            self.playbackStopped = False
+                            from urllib.parse import urlencode, quote_plus, quote, unquote
+                        except ImportError:
+                            from urllib import urlencode, quote_plus, quote, unquote
 
-                            channelInfo, licenseUrl = channelInfo
-                            strmUrl = channelInfo.strm
+                        if ADDON.getSetting('archive_support') == 'true':
+                            #if self.archiveService != '':
+                            if str(self.playlistArchive()) != '':
+                                archivePlaylist = str(self.playlistArchive())
+                                catchupList = archivePlaylist.split(', ')
 
-                            try:
-                                from urllib.parse import urlencode, quote_plus, quote, unquote
-                            except ImportError:
-                                from urllib import urlencode, quote_plus, quote, unquote
+                                # Catchup strings
+                                duration = catchupList[0]
+                                offset = catchupList[1]
+                                utc = catchupList[2]
+                                lutc = catchupList[3]
+                                year = catchupList[4]
+                                month = catchupList[5]
+                                day = catchupList[6]
+                                hour = catchupList[7]
+                                minute = catchupList[8]
+                                second = catchupList[9]
 
-                            PROTOCOL = 'mpd'
-                            DRM = 'com.widevine.alpha'
+                                base = ['https://teliatv.dk', 'https://www.teliaplay.se']
+                                classic = ['https://teliatv.dk', 'https://classic.teliaplay.se']
 
-                            import inputstreamhelper
-                            is_helper = inputstreamhelper.Helper(PROTOCOL, drm=DRM)
-                            if is_helper.check_inputstream():  
-                                ListItem = xbmcgui.ListItem(path=strmUrl)
-                                ListItem.setInfo( type="Video", infoLabels={ "Title": channelInfo.title, } )
-                                ListItem.setContentLookup(False)
-                                if sys.version_info[0] > 2:
-                                    ListItem.setProperty('inputstream', is_helper.inputstream_addon)
+                                cc = ['dk', 'se']
+
+                                country            = int(ADDON.getSetting('teliaplay_locale'))
+                                dashjs             = ADDON.getSetting('teliaplay_devush')
+                                beartoken          = ADDON.getSetting('teliaplay_beartoken')
+                                tv_client_boot_id  = ADDON.getSetting('teliaplay_tv_client_boot_id')
+                                usern              = ADDON.getSetting('teliaplay_usern')
+
+                                UA = 'Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4389.90 Safari/537.36 Edg/89.0.774.63'
+
+                                utc = utc + '000'
+                                lutc = lutc + '000'
+
+                                url = 'https://classic.teliaplay.se/rest/v2/epg/{cid}/map?deviceType=WEB&fromTime={start}&toTime={end}&followingPrograms=0'.format(base=base[country], cid=channelInfo.cid, start=utc, end=lutc)
+
+                                headers = {
+                                    'Accept': 'text/html,application/xhtml+xml,application/xml;q=0.9,image/webp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q=0.9',
+                                    'Accept-Encoding': 'gzip, deflate, br',
+                                    'Accept-Language': 'sv,en;q=0.9,en-GB;q=0.8,en-US;q=0.7,pl;q=0.6',
+                                    'Cache-Control': 'no-cache',
+                                    'Connection': 'keep-alive',
+                                    'DNT': '1',
+                                    'Host': 'classic.teliaplay.se',
+                                    'Pragma': 'no-cache',
+                                    'Sec-Fetch-Dest': 'document',
+                                    'Sec-Fetch-Mode': 'navigate',
+                                    'Sec-Fetch-Site': 'none',
+                                    'Sec-Fetch-User': '?1',
+                                    'Upgrade-Insecure-Requests': '1',
+                                    'User-Agent': UA,
+                                }
+
+                                response = requests.get(url, headers=headers, verify=False).json()
+
+                                try:
+                                    cid = response['map'][channelInfo.cid][1]['assetId']
+                                except:
+                                    cid = ''
+
+                                if cid != '':
+                                    streamType = 'SVOD'
                                 else:
-                                    ListItem.setProperty('inputstreamaddon', is_helper.inputstream_addon)
-                                ListItem.setMimeType('application/dash+xml')
-                                ListItem.setProperty('inputstream.adaptive.license_type', 'com.widevine.alpha')
-                                ListItem.setProperty('inputstream.adaptive.license_key', licenseUrl)
-                                ListItem.setProperty('inputstream.adaptive.manifest_type', 'mpd')
-                                ListItem.setProperty('IsPlayable', 'true')
+                                    xbmcgui.Dialog().ok(strings(30998), strings(59980))
+                                    return
 
-                            self.strmUrl = strmUrl
-                            xbmc.Player().play(item=self.strmUrl, listitem=ListItem, windowed=startWindowed)
-                            res = True
+                                url = 'https://ottapi.prod.telia.net/web/{cc}/streaminggateway/rest/secure/v1/streamingticket/{type}/{cid}/DASH'.format(cc=cc[country], cid=(str(cid)), type=streamType)
 
-                        except Exception as ex:
-                            deb('Exception while trying to play video: {}'.format(getExceptionString()))
-                            self.unlockCurrentlyPlayedService()
-                            xbmcgui.Dialog().ok(strings(57018), strings(57021) + '\n' + strings(57028) + '\n' + str(ex))
+                                headers = {
+                                    'Accept': '*/*',
+                                    'Accept-Encoding': 'gzip, deflate, br',
+                                    'Accept-Language': 'sv,en;q=0.9,en-GB;q=0.8,en-US;q=0.7,pl;q=0.6',
+                                    'Authorization': 'Bearer '+ beartoken,
+                                    'Cache-Control': 'no-cache',
+                                    'Connection': 'keep-alive',
+                                    'Content-Type': 'text/plain;charset=UTF-8',
+                                    'DNT': '1',
+                                    'Host': 'ottapi.prod.telia.net',
+                                    'Origin': base[country],
+                                    'Pragma': 'no-cache',
+                                    'Referer': base[country]+'/',
+                                    'Sec-Fetch-Dest': 'empty',
+                                    'Sec-Fetch-Mode': 'cors',
+                                    'Sec-Fetch-Site': 'cross-site',
+                                    'User-Agent': UA,
+                                    'tv-client-boot-id': tv_client_boot_id,
+                                }
+                                
+                                params = (
+                                    ('playerProfile', 'DEFAULT'),
+                                    ('sessionId', six.text_type(uuid.uuid4())),
+                                )
+
+                                response = sess.post(url, headers=headers, params=params, cookies=sess.cookies, verify=False).json()
+
+                                streamingUrl = response["streamingUrl"]
+                                token = response["token"]
+                                currentTime = response["currentTime"]
+                                expires = response["expires"]
+
+                                mpdurl = '{classic}?ssl=true&time={time}&token={token}&expires={expires}&c={user_id}&d={dev_id}'.format(classic=streamingUrl, time=currentTime, token=token, expires=expires, user_id=usern, dev_id=dashjs)
+                                
+                                headers = {
+                                    'Accept': '*/*',
+                                    'Accept-Encoding': 'gzip, deflate, br',
+                                    'Accept-Language': 'sv,en;q=0.9,en-GB;q=0.8,en-US;q=0.7,pl;q=0.6',
+                                    'Cache-Control': 'no-cache',
+                                    'Connection': 'keep-alive',
+                                    'DNT': '1',
+                                    'Host': 'wvls.webtv.telia.com:8063',
+                                    'Origin': base[country],
+                                    'Pragma': 'no-cache',
+                                    'Referer': base[country]+'/',
+                                    'Sec-Fetch-Dest': 'empty',
+                                    'Sec-Fetch-Mode': 'cors',
+                                    'Sec-Fetch-Site': 'cross-site',
+                                    'User-Agent': UA,
+                                    'x-axdrm-message': dashjs,
+                                }
+
+                                xheaders = {
+                                    'Accept': '*/*',
+                                    'Accept-Encoding': 'gzip, deflate, br',
+                                    'Accept-Language': 'sv,en;q=0.9,en-GB;q=0.8,en-US;q=0.7,pl;q=0.6',
+                                    'Cache-Control': 'no-cache',
+                                    'Connection': 'keep-alive',
+                                    'DNT': '1',
+                                    'Origin': base[country],
+                                    'Pragma': 'no-cache',
+                                    'Referer': base[country]+'/',
+                                    'Sec-Fetch-Dest': 'empty',
+                                    'Sec-Fetch-Mode': 'cors',
+                                    'Sec-Fetch-Site': 'cross-site',
+                                    'User-Agent': UA,
+                                }
+
+                                mpdurl_re = sess.get(mpdurl, headers=xheaders, verify=False).json()
+                                mpdurl = mpdurl_re["location"]
+
+                                strmUrl = mpdurl
+                                
+                                if sys.version_info[0] > 2:
+                                    headok = Parse.urlencode(headers)
+                                else:
+                                    headok = Request.urlencode(headers)
+
+                                licurl = 'https://wvls.webtv.telia.com:8063/'
+                                licenseUrl = licurl+'|'+headok+'|R{SSM}|'
+
+                        PROTOCOL = 'mpd'
+                        DRM = 'com.widevine.alpha'
+
+                        import inputstreamhelper
+                        is_helper = inputstreamhelper.Helper(PROTOCOL, drm=DRM)
+                        if is_helper.check_inputstream():  
+                            ListItem = xbmcgui.ListItem(path=strmUrl)
+                            ListItem.setInfo( type="Video", infoLabels={ "Title": channelInfo.title, } )
+                            ListItem.setContentLookup(False)
+                            if sys.version_info[0] > 2:
+                                ListItem.setProperty('inputstream', is_helper.inputstream_addon)
+                            else:
+                                ListItem.setProperty('inputstreamaddon', is_helper.inputstream_addon)
+                            ListItem.setMimeType('application/dash+xml')
+                            ListItem.setProperty('inputstream.adaptive.license_type', 'com.widevine.alpha')
+                            ListItem.setProperty('inputstream.adaptive.license_key', licenseUrl)
+                            ListItem.setProperty('inputstream.adaptive.manifest_type', 'mpd')
+                            ListItem.setProperty('IsPlayable', 'true')
+
+                        self.strmUrl = strmUrl
+                        xbmc.Player().play(item=self.strmUrl, listitem=ListItem, windowed=startWindowed)
+                        res = True
+
+                    except Exception as ex:
+                        deb('Exception while trying to play video: {}'.format(getExceptionString()))
+                        self.unlockCurrentlyPlayedService()
+                        xbmcgui.Dialog().ok(strings(57018), strings(57021) + '\n' + strings(57028) + '\n' + str(ex))
 
 
                 elif self.currentlyPlayedService['service'] == 'WP Pilot':
